# hackathon-emscripten

./: .gitignore  CMakeLists.txt  build.sh
src/: example.cpp  main.cpp
